--- a/config.yml
+++ b/config.yml
@@ -1,16 +1,10 @@
 builds:
-  am-as:
-    composite: 3121121
-    dungeons: 3121121
-  stm-as:
-    composite: 3121123
-    dungeons: 1121113
-  am-pl:
-    composite: 3121221
-    dungeons: 3121221
-  stm-pl:
-    composite: 3121223
-    dungeons: 1121213
+  am:
+    composite: 1121121 # FotM_Mis_AS_MB_AM
+    single: 1111121 # FotM_ToF_AS_MB_AM
+  hv:
+    composite: 1121122 # FotM_Mis_AS_MB_HV
+    single: 1111122 # FotM_ToF_AS_MB_HV
 covenants:
   - kyrian
   - night_fae
@@ -27,11 +21,11 @@ sims:
     steps:
       - DPS
     files:
-      - apl.simc
+      - shadowflametest.simc
   conduits:
     builds: true
     weights: false
-    covenant: 
+    covenant:
       lookup: true
       files: true
     lookupType: spell
@@ -176,9 +170,8 @@ sims:
     steps:
       - DPS
     files:
-      - AM.simc
-      - LotV.simc
-      - STM.simc
+      - AM_sf.simc
+      - AM_ecctv.simc
   trinkets:
     builds: true
     weights: false
@@ -226,7 +219,8 @@ sims:
       - weights.simc
 compositeWeights: weightsCastleNathria
 singleTargetWeights: weightsSingle
-simcBuild: nightly
+simcBuild: local
+localBuild: ./simc.exe
 defaultIterations: 10000
 raidbots:
   apiUrlBase: https://mimiron.raidbots.com
